--- a/nawaar-nc-knews/package.json
+++ b/nawaar-nc-knews/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "lodash.throttle": "^4.1.1",
     "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
