--- a/nawaar-nc-knews/package.json
+++ b/nawaar-nc-knews/package.json
@@ -6,6 +6,7 @@
     "@reach/router": "^1.2.1",
     "axios": "^0.18.0",
     "lodash.throttle": "^4.1.1",
+    "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
